# muFlows

./: .flake8  CHANGELOG.md  DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
muflow/: __init__.py  context.py  dependencies.py  executor.py  outputs.py  pipeline.py  plan.py  planner.py  registry.py  testing.py
muflow/backends/: __init__.py  aws_lambda.py  base.py  callbacks.py  celery.py  handle.py  lambda_backend.py  step_functions.py
muflow/context/: __init__.py  base.py  local.py  parameterized.py  s3.py  task.py  workflow.py
muflow/examples/: ml_task.py  ml_workflow.py
muflow/io/: __init__.py  json.py  resources.py  xarray.py
muflow/storage/: __init__.py  base.py  local.py  progress.py  s3.py
muflows/: __init__.py  context.py  executor.py  workflow.py
tests/: __init__.py  conftest.py  test_backends.py  test_celery_backend.py  test_context.py  test_dependencies.py  test_executor.py  test_function_tasks.py  test_function_workflows.py  test_io.py  test_io_resources.py  test_ml_task.py  test_ml_workflow.py  test_pipeline.py  test_plan.py  test_plan_handle_progress.py  test_planner.py  test_progress.py  test_s3_storage.py  test_step_functions_backend.py  test_storage.py  test_testing.py  test_workflow.py
